@@ -22,19 +22,24 @@ module ActiveRecord
       
       module SingletonMethods
         # Pass either a tag string, or an array of strings or tags
+        # 
+        # Options:
+        #   :exclude - Find models that are not tagged with the given tags
+        #   :match_all - Find models that match all of the gievn tags, not just one
+        #   :conditions - A piece of SQL conditions to add to the query
         def find_tagged_with(tags, options = {})
           tags = Tag.parse(tags) if tags.is_a?(String)
           return [] if tags.empty?
           tags.map!(&:to_s)
           
-          conditions = sanitize_sql(['tags.name IN (?)', tags])
+          conditions = sanitize_sql(["#{table_name}_tags.name #{"NOT" if options.delete(:exclude)} IN (?)", tags])
           conditions << " AND #{sanitize_sql(options.delete(:conditions))}" if options[:conditions]
           
-          group = "taggings.taggable_id HAVING COUNT(taggings.taggable_id) = #{tags.size}" if options.delete(:match_all)
+          group = "#{table_name}_taggings.taggable_id HAVING COUNT(#{table_name}_taggings.taggable_id) = #{tags.size}" if options.delete(:match_all)
           
           find(:all, { :select => "DISTINCT #{table_name}.*",
-            :joins => "LEFT OUTER JOIN taggings ON taggings.taggable_id = #{table_name}.#{primary_key} AND taggings.taggable_type = '#{name}' " +
-                      "LEFT OUTER JOIN tags ON tags.id = taggings.tag_id",
+            :joins => "LEFT OUTER JOIN taggings #{table_name}_taggings ON #{table_name}_taggings.taggable_id = #{table_name}.#{primary_key} AND #{table_name}_taggings.taggable_type = '#{name}' " +
+                      "LEFT OUTER JOIN tags #{table_name}_tags ON #{table_name}_tags.id = #{table_name}_taggings.tag_id",
             :conditions => conditions,
             :group      => group }.merge(options))
         end
