@@ -1,3 +1,8 @@
+[31 March 2007]
+
+* Add Tag.delimiter accessor to change how tags are parsed.
+* Fix :include => :tags when used with find_tagged_with
+
 [7 March 2007]
 
 * Fix tag_counts for SQLServer [Brad Young]
